# Semillero-Fire

./: .gitattributes  .gitignore
Presentaciones/: Articulo(antena_parche_estirables).pptx
antenas/: .gitignore  pyproject.toml
antenas/src/antenas/: .gitignore
antenas/src/antenas/dipolo/: main.py
antenas/src/antenas/dipolo/HFSS/: antena_dipolo.aedt
antenas/src/antenas/dipolo/models/: antena_dipolo.py
antenas/src/antenas/parche/: main.py
antenas/src/antenas/parche/models/: PATCH_ANTENNA.py
antenas/src/antenas/parche_circulo/: main.py
antenas/src/antenas/parche_circulo/HFSS/: antena_circulo.aedt
antenas/src/antenas/parche_circulo/models/: antena_circulo.py
antenas/src/antenas/parche_linea/: main.py
antenas/src/antenas/parche_linea/HFSS/: antena_linea.aedt
antenas/src/antenas/parche_linea/models/: antena_linea.py
antenas/src/antenas/pruebas/: main.py
antenas/src/antenas/pruebas/models/: Ejemplo.py
antenas/src/antenas/radar/: main.py
antenas/src/antenas/radar/HFSS/: antena_radar.aedt
antenas/src/antenas/radar/models/: antena_radar.py
antenas/src/antenas/ranura_elemental/: main.py
antenas/src/antenas/ranura_elemental/HFSS/: antena_ranura_elemental.aedt
antenas/src/antenas/ranura_elemental/models/: antena_ranura_elemental.py
